<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_my_templates"
        android:icon="@drawable/ic_templates"
        android:title="@string/title_my_templates" />

    <item
        android:id="@+id/navigation_create"
        android:icon="@drawable/ic_create"
        android:title="@string/title_create" />

    <item
        android:id="@+id/navigation_reminders"
        android:icon="@drawable/ic_reminders"
        android:title="@string/title_reminders" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_profile"
        android:title="@string/title_profile" />
</menu>
