<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.ds.eventwishes.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home">
        <action
            android:id="@+id/action_home_to_editor"
            app:destination="@id/navigation_editor" />
    </fragment>

    <fragment
        android:id="@+id/navigation_editor"
        android:name="com.ds.eventwishes.ui.editor.ScriptEditorFragment"
        android:label="@string/title_editor"
        tools:layout="@layout/fragment_script_editor">
        <argument
            android:name="wishId"
            app:argType="string" />
        <argument
            android:name="htmlContent"
            app:argType="string" />
    </fragment>

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.ds.eventwishes.ui.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />

</navigation>
